--- a/css/main.css
+++ b/css/main.css
@@ -160,3 +160,32 @@
     line-height: 2.2;
     color: #fff;
 }
+
+/********************** Artist Style**********************/
+.artist{
+    background-color: #141414;
+}
+
+.artist-horizontal{
+    width: 100%;
+    height: auto;
+    background-color: #141414;
+    overflow: hidden;
+    overflow-x: scroll;
+}
+.artist-wrapper {
+    width: 6000px;
+    display: flex;
+    column-gap: 1rem;
+    white-space: nowrap;
+}
+.artist-wrapper .artist-item{
+    width: 340px;
+    height: 520px;
+    
+}.artist-wrapper .artist-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
