--- a/css/main.css
+++ b/css/main.css
@@ -14,8 +14,8 @@
 }
 .landing-page header .nav-wrap{
     width: 100%;
-    height: 100px;
-    padding: 0 160px;
+    height: 6.25rem;
+    padding: 0 10rem;
     background-color: transparent;
     display: flex;
     justify-content: space-between;
@@ -23,20 +23,20 @@
 }
 .landing-page .logo li{
     font-family: var(--ff-en-belleza);
-    font-size: 2.5rem;
+    font-size: 40px;
     font-weight: normal;
     color: #fff;
     
 }
 .landing-page .nav-bar{
     display: flex;
-    column-gap: 4rem;
+    column-gap: 64px;
    
 }
 
 .landing-page .nav-bar li a{
     font-family: var(--ff-kr-notosans);
-    font-size: 1.5rem;
+    font-size: 24px;
     font-weight:400;
     color: #fff;
     display: block;
@@ -53,14 +53,14 @@
 }
 .landing-page-maintxt .left-year{
     font-family: var(--ff-num-yesevaone);
-    font-size: 9.375rem;
+    font-size: 150px;
     color: #fff;
     font-weight: normal;
     animation: leftyear 1s linear;
 }
 .landing-page-maintxt .right-year{
     font-family: var(--ff-num-yesevaone);
-    font-size: 9.375rem;
+    font-size: 150px;
     color: #fff;
     font-weight: normal;
     animation: rightyear 1s linear;
@@ -68,7 +68,7 @@
 .landing-page-maintxt .center-text{
     font-family: var(--ff-kr-notosans);
     font-weight: 400;
-    font-size: 2.5rem;
+    font-size: 40px;
     line-height: 1.6;
     text-align: center;
     color: #fff;
@@ -115,9 +115,9 @@
     justify-content: center;
     align-items: center;
     text-transform:uppercase;
-    font-size:0.75rem;
-    width:70px;
-    height:70px;
+    font-size:12px;
+    width:4.375rem;
+    height:4.375rem;
     
 }
 /* stroke-dasharray : 첫번째 - 선길이, 두번째 - 끊어진 길이 */
@@ -130,7 +130,7 @@
 .scroll-btn a svg rect{
     fill:transparent;
     stroke:#fff;
-    stroke-width: 2px;
+    stroke-width: .125rem;
     stroke-dasharray:338% 37;
     stroke-dashoffset:240%;
     transition:all 1.5s;
@@ -155,7 +155,7 @@
 }
 .intro .intro-wrap p{
     font-family: var(--ff-kr-notosans);
-    font-size: 2rem;
+    font-size: 32px;
     font-weight: 400;
     line-height: 2.2;
     color: #fff;
@@ -165,57 +165,73 @@
 .artist{
     background-color: #141414;
 }
-
+.artist .title{
+    padding-bottom: 2rem;
+}
 .artist-horizontal{
     width: 100%;
     height: auto;
     background-color: #141414;
-    overflow: auto;
-   
+    overflow:hidden;
+    
+    
 }
 .artist-wrapper {
-    width: 6000px;
+    width: 375rem;
     display: flex;
-    column-gap: 1rem;
-    white-space: nowrap;
+    column-gap: 16px;
+    /* white-space: nowrap; */
+    
+   
 }
 .artist-wrapper .artist-item{
-    width: 340px;
-    height: 520px;
-    /* position: relative;
-    overflow: hidden; */
+    width: 21.25rem;
+    height: 32.5rem;
+    position: relative;
+    overflow: hidden; 
 }
 .artist-wrapper .artist-item img{
     width: 100%;
     height: 100%;
     object-fit: cover;
-   
+    
+}
+.artist-wrapper .artist-item .artist-txt{
+    
+    width: 100%;
+    height: 130px;
+    background-color: rgba(0, 0, 0, .3);
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    padding-top: 1rem;
+    padding-right: 1rem;
 }
 
-/* .artist-wrapper .artist-item:hover .artist-txt{
+ /* .artist-wrapper .artist-item:hover .artist-txt{
     width: 100%;
-    height: 150px;
+    height: 9.375rem;
     background-color: rgba(0, 0, 0, .5);
     position: absolute;
     bottom: 0;
     right: 0;
-    padding-top: 32px;
-    padding-right: 16px;
-    animation: artist-txt-show .3s linear;
+    padding-top: 2rem;
+    padding-right: 1rem;
+    _animation: artist-txt-show .3s linear;
     
 } */
 
-/* @keyframes artist-txt-show{
+ @keyframes artist-txt-show{
     0%{
-        bottom: -150px;
+        bottom: -9.375rem;
     }
     100%{
         bottom: 0;
     }
-}  */
+}  
 
 .artist-txt span{
-    font-size: 1.25rem;
+    font-size: 20px;
     font-weight: 400;
     font-family: var(--ff-en-roboto);
     color: #fff;
@@ -223,8 +239,8 @@
     display: block;
 }
 .artist-txt p{
-    font-size: 4.5rem;
-    font-weight: 700;
+    font-size: 62px;
+    font-weight: 600;
     font-family: var(--ff-en-roboto);
     color: #fff;
     text-align: right;
