--- a/css/common.css
+++ b/css/common.css
@@ -59,7 +59,10 @@ body{
     font-weight: 400;
     padding-right: 12px;
     cursor: pointer;
+    transition: all .5s;
+    /* display: block; */
 }
+
 .more-btn .arrow{
     width: 50px;
     height: 8px;
