--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@
     height: auto;
     background-color: #141414;
     overflow:hidden;
-    
+    /* scroll-behavior: smooth;  */
     
 }
 .artist-wrapper {
@@ -245,8 +245,160 @@
     color: #fff;
     text-align: right;
 }
-/* 사진 정리 */
-/* 마우스 휠하면 가로스크롤 넣어야함 */
-/* 배우 이름 디자인 */
+
+
+/********************** Centent Style**********************/
+
+.contents-wrapper{
+    height: 100%;
+}
+.contents-wrapper .content-top{
+    width: 100%; 
+    height: 50%;
+    background-image: url(../images/content-1.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    /* filter: blur(2px) grayscale(30%); */
+    padding: 0 160px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+.contents-wrapper .content-bottom{
+    width: 100%;
+    height: 50%;
+    background-image: url(../images/content-2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 0 160px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.contents-wrapper .content-text-head h2{
+    font-style: var(--ff-en-roboto);
+    font-size: 5.5rem;
+    font-weight: 600;
+    color: #fff;
+    line-height: 1;
+}
+.contents-wrapper .content-text-sub p{
+    font-style: var(--ff-en-roboto);
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #fff;
+    line-height: 1.8;
+}
+
+
+/********************** Namooactors News **********************/
+.news{
+  background-color: #141414;
+
+}
+
+/********************** Namooactors News **********************/
+.information{
+  background-color: #141414;
+}
+
+.information .info-text{
+    padding-top: 1.875rem;
+    font-style: var(--ff-kr-notosans);
+    font-weight: 400;
+    font-size: 2.875rem;
+    color: #fff;
+}
+
+.information .info-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 0;
+}
+.information .info-wrapper .info-item{
+    width: 230px;
+    height: 230px;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.information .info-wrapper .info-item span{
+    font-style: var(--ff-en-roboto);
+    font-size: 1.375rem;
+    font-weight: 400;
+    color: #fff;
+    word-break: keep-all;
+    width: 78%;
+  
+}
+.information .info-wrapper i{
+    font-size: 3rem;
+    color: #fff;
+    padding: 0 36px;
+}
+
+.information .info-bottom{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    row-gap: 1.2rem;
+}
+
+.information .info-bottom p{
+    font-style: var(--ff-kr-notosans);
+    font-size: 2rem;
+    font-weight: 400;
+    color: #fff;
+    
+}
+.information .info-bottom .info-btn{
+    width: 150px;
+    height: 55px;
+    background-color: #fff;
+    color: black;
+    font-size: 1.75rem;
+    text-align: center;
+    line-height: 55px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all .5s;
+}
+.information .info-bottom .info-btn:hover{
+    background-color: black;
+    color: #fff;
+    border: 2px solid #fff;
+}
+
+/* footer */
+.footer-wrap{
+    background-color: #141414;
+}
+.footer{
+    padding: 36px 0;
+    border-top: 2px solid #fff;
+    line-height: 1.8;
+    text-align: center;
+}
+.footer strong{
+    font-size: 24px;
+}
+.footer p{
+    font-style: var(--ff-kr-roboto);
+    font-size: 20px;
+    color: #fff;
+    font-weight: 400;
+    letter-spacing: 2px;
+    
+}
+
 
 
