반응형 작업 중 0612

--- a/css/common.css
+++ b/css/common.css
@@ -37,6 +37,12 @@ body{
     transition: all .2s;
 }
 
+/* navigation */
+#fp-nav ul li a span, .fp-slidesNav ul li a span{
+    background: #fff !important; 
+    
+}
+
 
 /************** Title Style *****************/
 .title p{
