--- a/css/responsive.css
+++ b/css/responsive.css
@@ -18,6 +18,8 @@
         font-size: 28px;
     }
 
+  
+
 }
 
 
@@ -74,6 +76,15 @@
         text-overflow: ellipsis;  	 
         white-space: nowrap; 		
         word-break:break-all */
+    }
+
+      /* Information */
+      .information .info-text{
+        font-size: 2.5rem;
+    }
+    .information .info-wrapper .info-item{
+        width: 200px;
+        height: 200px;
     }
 }
 
@@ -161,6 +172,21 @@
         font-size: 1.8rem;
      }
 
+    /* Information */
+    .information .info-wrapper i{
+        display: none;
+    }
+    .information .info-wrapper{
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+    .info-item-top,
+    .info-item-bottom{
+        column-gap: 4rem;
+    }
+
+
+
 }
 
 
@@ -244,6 +270,28 @@
      .contents-wrapper .content-text-sub p{
         font-size: 1.5rem;
      }
+
+    /* Information */
+    .information .info-text{
+        font-size: 2rem;
+    }
+    .information .info-bottom p{
+        font-size: 1.6rem;
+    }
+    .information .info-bottom .info-btn{
+        width: 130px;
+        height: 45px;
+        font-size: 1.5rem;
+        line-height: 45px;
+    }
+
+    /* Footer */
+    .footer strong {
+        font-size: 20px;
+    }
+    .footer p{
+        font-size: 16px;
+    }
     
 }
 
@@ -327,6 +375,45 @@
      .contents-wrapper .content-text-sub p{
         font-size: 1rem;
      }
+
+     /* Information */
+     .information .info-wrapper{
+        row-gap: 1rem;
+     }
+     .info-item-top, .info-item-bottom{
+        column-gap: 2rem;
+     }
+     .information .info-text{
+        font-size: 1.5rem;
+        line-height: 1.6;
+     }
+     .information .info-wrapper .info-item{
+        width: 160px;
+        height: 160px;
+        border: 3px solid #fff;
+     }
+     .information .info-wrapper .info-item span{
+        font-size: 1rem;
+     }
+     .information .info-bottom p{
+        font-size: 1.3rem;
+     }
+     .information .info-bottom .info-btn{
+        width: 110px;
+        height: 40px;
+        font-size: 1.3rem;
+        line-height: 40px;
+     }
+
+    /* Footer */
+    .footer strong {
+        font-size: 16px;
+    }
+    .footer p{
+        font-size: 12px;
+        letter-spacing: 0;
+    }
+ 
 }
 
 
@@ -376,5 +463,36 @@
     .contents-wrapper .content-bottom{
         padding: 0 16px;
     }
-}
 
+    /* Information */
+    .information .info-text{
+        font-size: 1.2rem;
+    }
+    .information .info-wrapper .info-item{
+        width: 120px;
+        height: 120px;
+    }
+    .information .info-wrapper .info-item span{
+      font-size:  0.8rem; 
+    }
+    .information .info-bottom p{
+        font-size: 1rem;
+    }
+    .information .info-bottom .info-btn {
+        width: 90px;
+        height: 30px;
+        font-size: 1rem;
+        line-height: 30px;
+    }
+    .info-item-top, .info-item-bottom{
+        column-gap: 1rem;
+    }
+    /* Footer */
+    .footer strong {
+        font-size: 11px;
+    }
+    .footer p{
+        font-size: 0.5rem;
+    }
+
+}
