터치이벤트 완료 0616

--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,8 @@
     display: none;
 }
 .landing-page .nav-wrap .mobile-menu-icon{
-    width: 35px;
-    height: 25px;
+    width: 30px;
+    height: 20px;
     cursor: pointer;
 }
 .landing-page .nav-wrap .mobile-menu-icon img{
@@ -108,6 +108,7 @@
     opacity: 1;
     visibility: visible;
 }
+
 .overlay .overlay-menus-box{
     /* width: 30%; */
     /* height: 100%; */
@@ -240,21 +241,32 @@
     background-color: #141414;
 }
 .artist .title{
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 .artist-horizontal{
     width: 100%;
     height: auto;
     background-color: #141414;
-    overflow:hidden;
+    overflow:auto;
+
+    /* 스크롤바 숨기기 */
+    scrollbar-width: none;
+    -ms-overflow-style: none;
     /* scroll-behavior: smooth;  */
-    
+    /* touch-action: pan-x; */
+   
 }
+.artist-horizontal::-webkit-scrollbar {
+    display: none;
+}
+
+
 .artist-wrapper {
     width: 375rem;
     display: flex;
     column-gap: 16px;
     /* white-space: nowrap; */
+    /* touch-action: pan-x; */
     
    
 }
@@ -325,6 +337,7 @@
 
 .contents-wrapper{
     height: 100%;
+
 }
 .contents-wrapper .content-top{
     width: 100%; 
@@ -376,7 +389,7 @@
 
 }
 .news .title{
-    padding-bottom: 2rem;
+    padding-bottom: 1rem;
 }
 .news-wrapper{
     display: flex;
