--- a/css/responsive.css
+++ b/css/responsive.css
@@ -308,11 +308,15 @@
     
 }
 
+@media screen and (max-width:550px) {
+      /* full Page */
+      .fp-section, .fp-tableCell{height: 700px !important;}
+}
 
 
 
 @media screen and (max-width:500px){
-
+  
     /* Overlay Menus */
     .overlay .overlay-nav ul{
     row-gap: 1.5rem;
